<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        android:textSize="50sp"
        android:textAlignment="textEnd"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_clean"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        android:textSize="70sp"
        android:textAlignment="textEnd"/>


    <Button
    android:id="@+id/btn_positive_and_negative"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_zero"
        app:layout_constraintStart_toStartOf="parent"
    android:text="@string/positive_and_negative"
    android:textSize="30sp"/>

    <Button
    android:id="@+id/btn_zero"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_point"
        app:layout_constraintStart_toEndOf="@id/btn_positive_and_negative"
    android:text="@string/zero"
    android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_point"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equal"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
/>

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_point"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/equal"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_positive_and_negative"
        app:layout_constraintEnd_toStartOf="@id/btn_two"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/one"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_zero"
        app:layout_constraintEnd_toStartOf="@id/btn_three"
        app:layout_constraintStart_toEndOf="@id/btn_one"
        android:text="@string/two"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_point"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btn_equal"
        app:layout_constraintStart_toEndOf="@id/btn_three"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/plus"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_one"
        app:layout_constraintEnd_toStartOf="@id/btn_five"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/four"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toStartOf="@id/btn_six"
        app:layout_constraintStart_toEndOf="@id/btn_four"
        android:text="@string/five"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_three"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_six"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/minus"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_four"
        app:layout_constraintEnd_toStartOf="@id/btn_eight"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/seven"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_five"
        app:layout_constraintEnd_toStartOf="@id/btn_nine"
        app:layout_constraintStart_toEndOf="@id/btn_seven"
        android:text="@string/eight"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_six"
        app:layout_constraintEnd_toStartOf="@id/btn_multiplied"
        app:layout_constraintStart_toEndOf="@id/btn_eight"
        />

    <Button
        android:id="@+id/btn_multiplied"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_nine"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/multiplied"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_backspace"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_seven"
        app:layout_constraintEnd_toStartOf="@id/btn_clean"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/backspace"
        />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_eight"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintStart_toEndOf="@id/btn_backspace"
        android:text="@string/clean"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/percent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_nine"
        app:layout_constraintEnd_toStartOf="@id/btn_divided"
        app:layout_constraintStart_toEndOf="@id/btn_clean"
        />

    <Button
        android:id="@+id/btn_divided"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btn_multiplied"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/divided"
        android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>