<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/calculation_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        android:textSize="50sp"
        android:textAlignment="textEnd"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/keyboard"
        android:text="0"
        android:textSize="70sp"
        android:textAlignment="textEnd"/>



    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/grey">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp">

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"/>

            <Button
                android:id="@+id/btn_clean"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/clean"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/percent"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_divided"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/orange"
                android:text="@string/divided"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_multiplied"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:text="@string/multiplied"
                android:textSize="30sp"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/orange"
                android:text="@string/minus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/one"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/btn_two"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:text="@string/plus"
                android:textSize="30sp"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp">

            <Button
                android:id="@+id/btn_positive_and_negative"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/positive_and_negative"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/point"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="7dp"
                android:backgroundTint="@color/orange"
                android:text="@string/equal"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>